added a workaround for IE's problem in using prettyprint script from Google
--HG--
branch : utgb
extra : convert_revision : svn%3A4f659da4-262b-0410-8d43-f410cfebde8d/trunk/utgb%402136

--- a/utgb-style/src/main/resources/META-INF/maven/site.vm
+++ b/utgb-style/src/main/resources/META-INF/maven/site.vm
@@ -317,7 +317,7 @@
 <link href="$relativePath/css/prettify.css" type="text/css" rel="stylesheet" />
 <script type="text/javascript" src="$relativePath/script/prettify.js"></script>
   </head>
-  <body class="composite" onload="prettyPrint()">
+  <body class="composite" onload="if (/*@cc_on!@*/true){prettyPrint();}">
     <div id="banner">
       #banner( $decoration.bannerLeft "bannerLeft" )
       #banner( $decoration.bannerRight "bannerRight" )
