--- a/utgb-style/src/main/resources/css/maven-theme.css
+++ b/utgb-style/src/main/resources/css/maven-theme.css
@@ -20,7 +20,7 @@
 
 body {
   background-color: #fff;
-  font-family: Verdana, Helvetica, Arial, sans-serif;
+  font-family: Arial, Helvetica, Verdana, sans-serif;
   margin-left: auto;
   margin-right: auto;
   background-repeat: repeat-y;
@@ -28,7 +28,7 @@ body {
   padding: 0px;
 }
 td, select, input, li{
-  font-family: Verdana, Helvetica, Arial, sans-serif;
+  font-family: Arial, Helvetica, Verdana, sans-serif;
   font-size: 13px;
   color:#333333;
 }
@@ -140,7 +140,7 @@ p {
   border-bottom: 1px solid #aaaaaa;
   padding-top: 2px;
   padding-left: 9px;
-  color: #49635a;
+  color: #ed8f4e;
   background-image: url(../images/h5.jpg);
   background-repeat: no-repeat;
   background-position: left bottom;
@@ -204,6 +204,11 @@ table {
 .xright a
 { 
   border-bottom: 0;
+}
+
+b 
+{ 
+  color: #003880;
 }
 
 .xright a:link, .xright a:visited, .xright a:active {
