--- a/utgb-style/src/main/resources/css/maven-base.css
+++ b/utgb-style/src/main/resources/css/maven-base.css
@@ -83,7 +83,7 @@ div.clear hr{
   padding-left: 16px;
   list-style-position: outside;
   line-height: 1.2em;
-  font-size: smaller;
+  font-size: small;
 }
 #navcolumn li.expanded {
   background-image: url(../images/expanded.gif);
