--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/src/main/template/browser.vm
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/src/main/template/browser.vm
@@ -25,7 +25,16 @@
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <noscript>
+<p>JavaScript must be enabled in order for you to use this web site. However, it seems JavaScript is either disabled or not supported by your browser. 
+Please enable JavaScript by changing your browser options, then <a href="">try again</a>.
+</noscript>
 
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   </head>
 
   <body>
@@ -50,13 +59,12 @@
     </div>
 
     <div class="container">
-        <div class="hero-unit">
-        <h2>Welcome to $projectName$</h2>
-        <p><a class="btn btn-primary" href="browser.html">Browse &raquo;</a></p>
-        <p>Run "utgb gwt" and "utgb compile" to generate the browser page. </p>
-        </div>
-
-
+       <div class="utgb">
+         <script language="javascript" src="utgb.nocache.js"></script>
+        <iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
+        <span id="loading">Loading... </span>
+        <div id="utgb-main"></div>
+       </div>
       <hr>
 
       <footer>
