--- a/utgb-themes/theme-default/src/main/resources/style/utgb.css
+++ b/utgb-themes/theme-default/src/main/resources/style/utgb.css
@@ -1,7 +1,8 @@
-body
+body .utgb
 {
 	font-family: Tahoma, Helvetica, Arial, serif;
 	font-size: 12px;
+	line-height: normal;
 }
 
 #loading
@@ -9,12 +10,15 @@ body
 	font-size: 12px;
 	background-color: #003399;
 	width: 80px;
+	height: 15px;
 	float: right;
 	text-align: center;
 	color: white;
 	font-weight: bold;
+	padding-top: 50px;
 	padding-left: 10px;
 	padding-right: 10px;
+	z-index: 2000;
 }
 
 
@@ -298,7 +302,7 @@ sear.utgb .table .gwt-TextBox-readonly
 	font-size: 11px;
     background-image: url("../image/track-base.png");
 	nowrap: nowrap;
-    border-bottom: 1px solid #006699;
+    border-bottom: 0px solid #006699;
 }
 
 .utgb .track-icon 
