Fix browser.html template

--- a/utgb-themes/theme-default/src/main/resources/style/utgb.css
+++ b/utgb-themes/theme-default/src/main/resources/style/utgb.css
@@ -5,11 +5,8 @@ body .utgb
 	line-height: normal;
 }
 
-button,
-input,
-select,
-textarea {
-  font-size: auto;
+.utgb button, .utgb input, .utgb select, .utgb textarea {
+  font-size: 12px;
 }
 
 
